--- a/package.json
+++ b/package.json
@@ -10,17 +10,54 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.19.1",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-pdf/renderer": "^3.4.4",
+    "@stripe/stripe-js": "^3.4.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "docx": "^9.0.0",
+    "html2pdf.js": "^0.10.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.548.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.4.3",
     "next": "16.0.0",
+    "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
+    "openai": "^4.52.7",
+    "pdf-parse": "^1.1.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-dropzone": "^14.2.3",
     "shadcn-ui": "^0.9.5",
-    "tailwind-merge": "^3.3.1"
+    "stripe": "^15.12.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -30,6 +67,7 @@
     "eslint-config-next": "16.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "prisma": "^5.19.1",
     "tailwindcss": "^4.1.16",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
