--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "lucide-react": "^0.548.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.3",
-    "next": "16.0.0",
+    "next": "^15.0.0",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "openai": "^4.52.7",
     "pdf-parse": "^1.1.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "shadcn-ui": "^0.9.5",
     "stripe": "^15.12.0",
