--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next-themes": "^0.3.0",
     "openai": "^4.52.7",
     "pdf-parse": "^1.1.1",
+    "puppeteer": "^22.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/html2pdf.js": "^0.10.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
