--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "docx": "^9.0.0",
+    "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.548.0",
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/file-saver": "^2.0.7",
     "@types/html2pdf.js": "^0.10.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
