--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/html2pdf.js": "^0.10.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
